--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "pub-theme-shower-ribbon",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "shower presentation theme for pub-server",
   "main": "pub-config.js",
   "dependencies": {
     "shower-core": "^1.0.7",
     "shower-ribbon": "^1.0.11"
   },
-  "devDependencies": {
-  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jldec/pub-theme-shower-ribbon.git"
+    "url": "https://github.com/jldec/pub-theme-shower-ribbon.git"
   },
   "author": "jurgen leschner",
   "license": "MIT"
