--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,2 @@
-env
-out/
-*.html
-*.rdb
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.swp
-*.swo
-coverage/
-node_modules/
-benchmarks/graphs
-.DS_Store
-Thumbs.db
+node_modules
+yarn.lock
